Add note and event symbols
